--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@ footer{background-color: lightskyblue;}
    <p>we provide top notch product with the best thing from a round Nigeia,or store is to exceed your expactaion</p>
 </section>
 <footer>
-   <a href="About us .html"cta="cta-button">About us </a>
+   <a href="about.html"cta="cta-button">About us </a>
 <p>&copy 2024 Hollab B Venture</p>
 </footer>
