--- a/about.html
+++ b/about.html
@@ -22,8 +22,6 @@
         <marquee>
             <h1>About us</h1>
         </marquee>
-
-
     </header>
 
     <h2>our mission</h2>
@@ -31,23 +29,26 @@
     <h2>our vision</h2>
     <p>to be the best supermarket in the world</p>
 
-    <img src="ppp.jpg" alt="Horo .jpg">
+    <img src="HollabB.jpg" alt="Hero .jpg">
+
+    <section>
+        <form action="#"></form>
+        <label for="name">name</label>
+        <br>
+        <input type="text" id="name" name="name"><br>
+        <label for="complaint">complaint</label><br>
+        <input type="text" id="complaint" complaint="complaint"><br>
+        <label for="email">Email</label><br>
+        <input type="text" id="email" Email="Email"><br>
+        <label for="order">order</label>
+        <br>
+        <input type="text" id="order" Order="Order">
+    </section>
+    <footer>
+        <p> we are located in Ojodu berger,Opic estate ,opposite demiller factories.</p>
+        <p>To reach us call us on 07058877790</p>
+        <p>&copy; 2024 Hollab B Ventures</p>
+    </footer>
 </body>
 
 </html>
-<footer>
-    <form action="#"></form>
-    <label for="name">name</label>
-    <br>
-    <input type="text" id="name" name="name"><br>
-    <label for="complaint">complaint</label><br>
-    <input type="text" id="complaint" complaint="complaint"><br>
-    <label for="email">Email</label><br>
-    <input type="text" id="email" Email="Email"><br>
-    <label for="order">order</label>
-    <br>
-    <input type="text" id="order" Order="Order">
-    <p> we are located in Ojodu berger,Opic estate ,opposite demiller factories.</p>
-    <p>To reach us call us on 07058877790</p>
-    <p>&copy; 2024 Hollab B Ventures</p>
-</footer>
